added handlers to get active subscriptions, delete card, get user card info
